# Generative_AI

./: README.md  RESUME_ANALYSER_HUGGINGfACE_LLM.ipynb  Reume_analyser.ipynb  Sql_agent (1).ipynb  Sql_agent (2).ipynb  Sql_agent (3).ipynb  ai_guard.py  mistaral_ai_rag_final.ipynb  rag_using_langchain.ipynb  screenshot_extraction.ipynb  self_correcting_sql_agent_with_langgraph.ipynb  sql_chain.ipynb  yolo.ipynb
crewai/: Agents.py  Crew.py  Tasks.py  Tools.py  requirements.txt
dataviz/: README.md  pyproject.toml  report.md
dataviz/generated_data/: report.md
dataviz/src/dataviz/: code_rag.py  crew.py  main.py
dataviz/src/dataviz/config/: agents.yaml  tasks.yaml
dataviz/src/dataviz/db/: chroma.sqlite3
dataviz/src/dataviz/tools/: custom_tool.py
gitcoderag/: README.md  pyproject.toml  requirements.txt
gitcoderag/src/gitcoderag/: crew.py  main.py
gitcoderag/src/gitcoderag/config/: agents.yaml  tasks.yaml
gitcoderag/src/gitcoderag/tools/: custom_tool.py
