[project]
name = "gitcoderag"
version = "0.1.0"
description = "gitcodeRag using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.83.0,<1.0.0"
]

[project.scripts]
gitcoderag = "gitcoderag.main:run"
run_crew = "gitcoderag.main:run"
train = "gitcoderag.main:train"
replay = "gitcoderag.main:replay"
test = "gitcoderag.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
